force-app/main/default/objects/Client_Information__c/Client_Information__c.object-meta.xml
<CustomObject>
    <label>Client Information</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>