force-app/main/default/objects/Client_Information__c/fields/Data_Migration_Conversion_Key__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Conversion_Key__c</fullName>
    <description>Conversion key from Data Migration</description>
    <externalId>true</externalId>
    <inlineHelpText>Conversion key from Data Migration</inlineHelpText>
    <label>Data Migration Conversion Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>