force-app/main/default/objects/Client_Information__c/fields/User_IP__c.field-meta.xml
<CustomField>
    <fullName>User_IP__c</fullName>
    <label>User/IP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>