force-app/main/default/objects/Client_Information__c/recordTypes/Remote_Access.recordType-meta.xml
<RecordType>
    <fullName>Remote_Access</fullName>
    <active>true</active>
    <label>Remote Access</label>
</RecordType>